tests/samples/negative/functions/function_type_array_param.ax
module function_type_array_param;

type Bad = fn([4]i32) -> i32;

fn main() -> i32 {
    return 0;
}
